crates/xlate/tests/snapshots/golden_matrix__full__responses_to_chat__gpt5_responses.snap
---
source: crates/xlate/tests/golden_matrix.rs
expression: rendered
---
--- body ---
{
  "model": "gpt-5.4",
  "messages": [
    {
      "role": "system",
      "content": "You are a helpful assistant."
    },
    {
      "role": "user",
      "content": "What is the weather in NYC?"
    },
    {
      "role": "assistant",
      "content": null,
      "tool_calls": [
        {
          "id": "call_abc",
          "type": "function",
          "function": {
            "name": "get_weather",
            "arguments": "{\"city\":\"NYC\"}"
          }
        }
      ]
    },
    {
      "role": "tool",
      "tool_call_id": "call_abc",
      "content": "Sunny, 72F"
    }
  ],
  "tools": [
    {
      "type": "function",
      "function": {
        "name": "get_weather",
        "description": "Get weather",
        "parameters": {
          "type": "object",
          "properties": {
            "city": {
              "type": "string"
            }
          }
        },
        "strict": false
      }
    }
  ],
  "parallel_tool_calls": true,
  "reasoning_effort": "high",
  "verbosity": "medium",
  "temperature": 0.7,
  "max_completion_tokens": 1024,
  "store": false,
  "metadata": {
    "session": "s1"
  }
}
--- headers ---
upstream_streams: false
--- degraded ---
tools.get_weather.strict=downgraded;ext.responses.truncation=dropped
